# molecular-property-prediction

./: .gitignore  README.md  model_card.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  sample_smiles.csv
docs/: usage.md
examples/: compare_encoders.py  custom_encoder.py  quickstart.py
notebooks/: demo.ipynb
results/: metrics.json
scripts/: benchmark.py  download_data.py
src/molprop/: __init__.py  data.py  featurize.py  models.py  tokenizer.py  train.py
tests/: test_api.py  test_models.py  test_tokenizer_and_data.py
