[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "molprop"
version = "0.2.0"
description = "Comparison of molecular representations (fingerprint, SMILES CNN, SMILES RNN) for property prediction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
keywords = ["cheminformatics", "molecular-property-prediction", "smiles", "rdkit", "pytorch"]
dependencies = [
    "torch>=2.0",
    "rdkit>=2023.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff==0.15.22", "black==26.5.1"]

[project.urls]
Repository = "https://github.com/aamirmalik-dr/molecular-property-prediction"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
molprop = ["sample_smiles.csv"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
